<resources>
    <string name="app_name">MyNotesKeepingApp</string>
    <string name="lower_description">By\n Android Developer Subhajit RuiDas</string>
    <string name="notes_app_name">Notes App</string>
    <string name="notes_caption">Life is too fast don\'t forget anything\n just Note it</string>
    <string name="titles">Title ....</string>
    <string name="subtitles">Subtitle ....</string>
    <string name="note_txt">Note ....</string>
    <string name="priority_txt">Priority</string>
    <string name="delete_icon">Delete</string>
    <string name="delete_permission">Are you sure you want to delete\n this Note?</string>
</resources>