<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E8E8"
    android:orientation="vertical"
    tools:context=".activity.InsertNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="60dp">
        <EditText
            android:id="@+id/upNotesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/titles"
            android:background="@drawable/edit_txt_bg"
            android:padding="15dp"/>
        <EditText
            android:id="@+id/upNotesSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/subtitles"
            android:background="@drawable/edit_txt_bg"
            android:padding="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_txt"
                android:layout_marginStart="12dp"
                android:textColor="@color/black_og"
                android:layout_marginEnd="12dp"
                android:textStyle="bold"
                android:textSize="17sp"/>
            <ImageView
                android:id="@+id/greenPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/green_shape"
                android:layout_margin="10dp"/>
            <ImageView
                android:id="@+id/yellowPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/yellow_shape"
                android:layout_margin="10dp"/>
            <ImageView
                android:id="@+id/redPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/red_shape"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/upNoteText"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:hint="@string/note_txt"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_txt_bg"
            android:padding="15dp"
            android:gravity="start"
            />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/updateNotesBtn"
        android:layout_margin="26dp"
        app:backgroundTint="@color/red"
        android:src="@drawable/baseline_check_24"
        />

</RelativeLayout>